# rp2040-rust-template

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
scripts/: ssh_start_server.sh
src/: main.rs
