[package]
edition = "2024"
name = "app"
version = "0.1.0"
license = "MIT"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.9"

# cargo build/run
[profile.dev]
codegen-units = 1
debug-assertions = true
incremental = false
overflow-checks = true
debug = 2
opt-level = 0

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
